--- a/admin/view/default/setting/setother.html
+++ b/admin/view/default/setting/setother.html
@@ -20,7 +20,7 @@ function getcron()
 		    <tr><td >过期空间数据保存天数：</td>
 		        <td ><input type="text" name="expire_save_day" value="{{if $setting.expire_save_day}}{{$setting.expire_save_day}}{{else}}30{{/if}}"  size="10"/>天,0为不删除</td></tr> 
 		    
-		    <tr><td >获取计伐任务脚本：</td>
+		    <tr><td >获取计划任务脚本：</td>
 		        <td ><input type='button' onclick="getcron();" value='获取'></tr>
 		   
 			<tr><td></td>
