--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -72,6 +72,7 @@ function updateViewResult()
 <div align="center">
 	<div class="wid_main mar_main" align="left">
 		<div class="block_top" align="left">当前位置：虚拟主机/cdn --> 产品列表</div>
+		<div id="updateView"></div>
 		<table class="table_main2" cellpadding="0" cellspacing="1">
 			  <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
 				<tr>
