--- a/user/view/default/common/head.html
+++ b/user/view/default/common/head.html
@@ -7,5 +7,5 @@
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/style.css" type="text/css"/>
 <link rel="stylesheet" rev="stylesheet" href="{{$PSTATIC}}/style/style2.css" type="text/css"/>
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}images/style3.css" type="text/css"/>
-<script  src='user/view/default/js/jquery.js' type="text/javascript"></script>
+<script  src='/style/jq.js' type="text/javascript"></script>
 </head>
