--- a/admin/view/default/setting/setother.html
+++ b/admin/view/default/setting/setother.html
@@ -11,21 +11,25 @@ function getcron()
 
 
 </script>
-<div>
-	<form  action="?c=setting&a=setOther" method='post'>
+<div align="center">
+	<div class="wid_main mar_main" align="left">
+		<div class="block_top" align="left">当前位置：系统设置--> 其他功能设置</div>
+		<form  action="?c=setting&a=setOther" method='post'>
 		<table class="table_main2" cellpadding="0" cellspacing="1">
-		  	<tr><td >续费后开通网站：</td>
+			<tr><td colspan="2" class="bg_main"><b>其他功能设置</b></td></tr>
+		  	<tr><td class="wid_general">续费后开通网站：</td>
 		        <td ><input type="checkbox" name="set_renew" value="1" {{if $setting.set_renew==1}}checked{{/if}} /></td></tr>
 		   
 		    <tr><td >过期空间数据保存天数：</td>
-		        <td ><input type="text" name="expire_save_day" value="{{if $setting.expire_save_day}}{{$setting.expire_save_day}}{{else}}30{{/if}}"  size="10"/>天,0为不删除</td></tr> 
+		        <td ><input type="text" name="expire_save_day" value="{{if $setting.expire_save_day}}{{$setting.expire_save_day}}{{else}}30{{/if}}"  size="10"/>&nbsp;天,0为不删除</td></tr> 
 		    
 		    <tr><td >获取计划任务脚本：</td>
-		        <td ><input type='button' onclick="getcron();" value='获取'></tr>
+		        <td ><input type='button' onClick="getcron();" value='获取'></tr>
 		   
 			<tr><td></td>
 				<td><input type='submit' value='确定'>&nbsp;&nbsp;</td></tr>
 		</table>
-	</form>
- <div id="cron"></div>
+		</form>
+ 		<div id="cron"></div>
+	</div>
 </div>
