--- a/admin/view/default/setting/setother.html
+++ b/admin/view/default/setting/setother.html
@@ -18,7 +18,7 @@ function getcron()
 		<table class="table_main2" cellpadding="0" cellspacing="1">
 			<tr><td colspan="2" class="bg_main"><b>计划任务设置</b></td></tr>
 			
-			<tr>{{$cron_str}}</tr>
+			<tr><td colspan="2" align='center'>{{$cron_str}}</td></tr>
 			
 		  	<tr><td class="wid_general">续费后开通网站：</td>
 		        <td ><input type="checkbox" name="set_renew" value="1" {{if $setting.set_renew==1}}checked{{/if}} /></td></tr>
