--- a/admin/view/default/mail/index.html
+++ b/admin/view/default/mail/index.html
@@ -4,6 +4,7 @@
 function check_smtp(val)
 {
 	if(val=='0'){
+		alert("请确认系统配置了sendMail,否则请选择smtp发送");
 		$("#smtp").css('display','none');
 	}else{
 		$("#smtp").css('display','');
