--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -174,14 +174,16 @@ img{margin:0;padding:0;border:0;}
 	<table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
 	<form id="form1" name="form1" method="post" action="?c=session&a=login&refer=web" >
 		<tr><td colspan="2">
-				{{if $role.user}}{{$role.user}},您好!  [<a href='?c=user&a=index'>进入会员中心</a>] [<a href='?c=session&a=logout'>退出</a>]{{else}}
-				用户名:
-				<input name="username" type="text" size="12" />
-				密码:
-				<input name="passwd" type="password" size="12" />
-				<input type="submit" name="Submit" value="登录" />
-				<a href="?c=public&a=register_n"><font color='red'>注册</font></a>
-				忘记密码 
+				{{if $role.user}}
+					{{$role.user}},您好!  [<a href='?c=user&a=index'>进入会员中心</a>] [<a href='?c=session&a=logout'>退出</a>]
+				{{else}}
+					用户名:
+					<input name="username" type="text" size="12" />
+					密码:
+					<input name="passwd" type="password" size="12" />
+					<input type="submit" name="Submit" value="登录" />
+					<a href="?c=public&a=register_n"><font color='red'>注册</font></a>
+					忘记密码 
 				{{/if}}
 	  		</td>
 			<td align="right"><script language="javascript" src="?c=product&a=productList&target=self"></script></td>
