--- a/user/view/default/vhostproduct/listVhost.html
+++ b/user/view/default/vhostproduct/listVhost.html
@@ -40,6 +40,7 @@
 				   <td class="right"> 
 					[<a href="?c=vhostproduct&a=upgradeForm&name={{$row.name}}" >升级</a>]
 					[<a href="?c=vhostproduct&a=renewForm&name={{$row.name}}" >续费</a>]
+					[<a href='?c=vhostproduct&a=impLogin&name={{$row.name}}' target="{{$target}}">控制面板</a>]
 					</td> 
 					<td><a href='?c=vhostproduct&a=impLogin&name={{$row.name}}' target="{{$target}}">{{$row.name}}</a></td>
 					
