--- a/user/view/default/public/register_n.html
+++ b/user/view/default/public/register_n.html
@@ -38,7 +38,7 @@
 					  </tr>
 					 <tr>
 						<td class="td_bgc right_reg">身份证:</td>
-						<td class="td_bgc right_2"><input type='text' name='id' id="wid2" value="" /></td>
+						<td class="td_bgc right_2"><input type='text' name='ids' id="wid2" value="" /></td>
 					  </tr>
 					 <tr>
 						 <td class="td_bgc td_hg" colspan="2" align="center" height="30"><input name="agree" type="checkbox" value="1">
