--- a/user/view/default/vhostproduct/sell.html
+++ b/user/view/default/vhostproduct/sell.html
@@ -32,107 +32,86 @@ function check_register()
   <form name='reg' action="?c=product&a=sell&product_id={{$product.id}}&product_type=vhost" method="post">
 <div class="wid_ri r_mar" align="right">
 <table id="table_ri" cellpadding="0" cellspacing="1">
-	 <tr><td colspan="2" class="red"><b>购买产品</b></td></tr>
-      <tr>
-        <td class="right_host_wid">产品:</td>
-        <td>{{$product.name}}</td>
-        </tr>
-      <tr>
-        <td>用户名:</td>
-        <td><input name="name" type="text" id="name">
-		    <input type="button" name="Submit" value="检测用户名" onClick="check_user()"></td>
-      </tr>
-      <tr>
-        <td>密码:</td>
-        <td><input name="passwd" type="password" id="passwd"></td>
-      </tr>
-	  <tr>
-        <td>确认密码:</td>
-        <td><input name="passwd2" type="password" id="passwd2"></td>
-	  </tr>
-	  <tr>
-        <td>购买时间:</td>
-        <td id="months">
-        {{if $product.month_flag}}
-       	 	<input type='radio' name='month' value='1' checked>1个月
-        {{/if}}
-            <input type='radio' name='month' value='12' {{if !$product.month_flag}}checked{{/if}}>1年
-			<input type='radio' name='month' value='24' >2年
-			<input type='radio' name='month' value='36'>3年</td>
-	  </tr>
-	  {{if $product.cdn==0}}
-	  <tr>
-        <td>语言引擎:</td>
-        <td>
-        {{if $product.cs==0}}
+	 	<tr><td colspan="2" class="red"><b>购买产品</b></td></tr>
+      	
+      	<tr><td class="right_host_wid">产品:</td>
+        	<td>{{$product.name}}</td></tr>
+      	
+      	<tr><td>用户名:</td>
+        	<td><input name="name" type="text" id="name">
+		    <input type="button" name="Submit" value="检测用户名" onClick="check_user()"></td></tr>
+      	
+      	<tr><td>密码:</td>
+        	<td><input name="passwd" type="password" id="passwd"></td></tr>
+	  	
+	  	<tr><td>确认密码:</td>
+        	<td><input name="passwd2" type="password" id="passwd2"></td></tr>
+	  	
+	  	<tr><td>购买时间:</td>
+        	<td id="months">
+        	{{if $product.month_flag}}
+       	 	<input type='radio' name='month' onclick='get_price(1);' value='1' checked>1个月
+        	{{/if}}
+            <input type='radio' name='month' onclick='get_price(12);' value='12' {{if !$product.month_flag}}checked{{/if}}>1年
+			<input type='radio' name='month' onclick='get_price(24);' value='24' >2年
+			<input type='radio' name='month' onclick='get_price(36);' value='36'>3年</td></tr>
+	  	
+	  	{{if $product.cdn==0}}
+	  	<tr><td>语言引擎:</td>
+        	<td>{{if $product.cs==0}}
         	{{$product.subtemplete}}
-        {{else}}
-        	<select name='subtemplete'>
-		    {{foreach from=$subtempletes item=subtemplete}}
-			    <option value='{{$subtemplete}}' {{if $subtemplete==$product.subtemplete}}selected{{/if}}>
-			    {{$subtemplete}}
-			    </option>
-		    {{/foreach}}
-		    </select>
-        {{/if}}
-        </td>
-	  </tr>
-	  <tr>
-        <td>空间大小:</td>
-        <td>{{$product.web_quota}}M</td>
-	  </tr>
-	  <tr>
-        <td>数据库大小:</td>
-        <td>{{$product.db_quota}}M</td>
-	  </tr>
-	  <!-- 
-	   <tr>
-        <td>允许绑定子目录:</td>
-        <td>{{if $product.subdir_flag==1}}是{{else}}否{{/if}}</td>
-	  </tr>
-	  -->
-	  {{/if}}
-	  <tr>
-        <td>域名绑定个数:</td>
-        <td>{{if $product.domain==-1}}不限{{else}} {{$product.domain}}个{{/if}}</td>
-	  </tr>
-	  <tr>
-        <td>最大连接数:</td>
-        <td>{{if $product.max_connect==0}}不限{{else}}{{$product.max_connect}}{{/if}}</td>
-	  </tr>
-	 
-	<!--   
-	  {{if $product.ftp!=1}}
-	  <tr>
-        <td>是否开启ftp:</td>
-        <td><font color='red'>否</font></td>
-	  </tr>
-	  {{/if}}
-	  -->
-	  <tr>
-        <td>产品说明:</td>
-        <td>{{$product.describe}}</td>
-	  </tr>
+        	{{else}}<select name='subtemplete'>
+		    		{{foreach from=$subtempletes item=subtemplete}}
+			    	<option value='{{$subtemplete}}' {{if $subtemplete==$product.subtemplete}}selected{{/if}}>{{$subtemplete}}</option>
+		    		{{/foreach}}
+		    		</select>
+        	{{/if}} </td></tr>
+	  	
+	  	<tr><td>空间大小:</td>
+        	<td>{{$product.web_quota}}M</td></tr>
+	  	
+	  	<tr><td>数据库大小:</td>
+        	<td>{{$product.db_quota}}M</td></tr>
+	  	{{/if}}
+	  	
+	  	<tr><td>域名绑定个数:</td>
+        	<td>{{if $product.domain==-1}}不限{{else}} {{$product.domain}}个{{/if}}</td></tr>
+	  	
+	  	<tr><td>最大连接数:</td>
+        	<td>{{if $product.max_connect==0}}不限{{else}}{{$product.max_connect}}{{/if}}</td></tr>
+	 	
+	 	<tr><td>流量限制:</td>
+        	<td>{{if $product.flow==0}}不限{{else}}{{$product.flow}}G/月{{/if}}</td></tr>
+	 	 	
+	  	<tr><td>产品说明:</td>
+        	<td>{{$product.describe}}</td></tr>
 	  
-       <tr>
-       <td id="show_name">产品价格(元):</td>
-       	<td id="show_price">{{if $product.show_price==1}}{{substr($product.price/100/12,0,6)}}元/月{{else}}{{$product.price/100}}元/年{{/if}}</td>
-        </tr>
+       	<tr><td id="show_name">产品价格(元):</td>
+       	   	<td id="show_price">{{if $product.show_price==1}}{{substr($product.price/100/12,0,6)}}元/月{{else}}{{$product.price/100}}元/年{{/if}}</td></tr>
         
-	    <tr>
-	    <td class="td_hg" colspan="2" align="center">
-		<input type="button" onClick="check_register()" value="确定"></td>
-        </tr>
+	    <tr><td class="td_hg" colspan="2" align="center"><input type="button" onClick="check_register()" value="确定"></td></tr>
     </table>
 	</div>
     </form>
   </div>
 <script language="javascript">
-		jQuery(":radio").click(function(){
-			var m=jQuery(this).val();
-			var p=m*({{$product.price}}/12/100);
-			jQuery("#show_price").html(p+"元"),
-			jQuery("#show_name").html("所需金额")
-		});
-
+function get_price(month)
+{
+	var p = '{{$product.price/100/12}}' * month;
+	jQuery("#show_name").html("所需金额");
+	var url = '?c=user&a=getUserPrice';
+	jQuery.get(url,function(pp){
+		if (pp != 'error'){
+			if( pp/100 < p) {
+				//jQuery("#show_price").html('<font color=red>金额不够</font>');
+				alert('金额不够');
+			}else{
+				jQuery("#show_price").html(p.toFixed(2)+"元");
+			}
+			
+		}else{
+			jQuery("#show_price").html(p.toFixed(2)+"元");
+		}  
+	});
+}
  </script>
