--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -75,17 +75,14 @@ function updateViewResult()
 		<div id="updateView"></div>
 		<table class="table_main2" cellpadding="0" cellspacing="1">
 			  <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
-				<tr>
-					<td colspan="12" class="bg_main hg_main">
+				<tr><td colspan="12" class="bg_main hg_main">
 					  <a href='?c=vhostproduct&a=flush'><b>[更新配置文件]</b></a>
 					  <a href="?c=vhostproduct&a=addProductForm" target='main'><b>[增加产品]</b></a>
 					  <select name='product_flag' onChange="javascript:product_form.submit();">
 					  <option value='0' {{if $product_flag==0}}selected{{/if}}>所有产品</option>
 					  <option value='1' {{if $product_flag==1}}selected{{/if}}>暂停产品</option>
 					  <option value='2' {{if $product_flag==2}}selected{{/if}}>可销售产品</option>
-					  </select>
-					</td>
-				 </tr>
+					  </select></td></tr>
 				 </form>
 				<tr id="bg_yellow">
 					<td>操作</td>
@@ -97,50 +94,31 @@ function updateViewResult()
 					<td>数据库类型</td>
 					<td>价格(元/年)</td>	
 					<td>绑定域名</td>	
-					<td>绑定子目录</td>	
+					<td>流量限制</td>	
 					<td>模板</td>		
-					<td>状态</td>    
-				</tr>
+					<td>状态</td></tr>
 				{{foreach from=$list item=row}}
-				<tr>
-					<td>
-						[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=vhostproduct&a=del&id={{$row.id}}';}" title="删除">删除</a>]
-						[<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}">更改</a>]
-					</td>
-					<td>
-						<input type='checkbox' id='view{{$row.id}}' onClick="updateView(this.id,{{$row.id}})" name='view' value='{{$row.view}}' {{if $row.view}}checked{{/if}}>
-				  {{$row.view}}
-					</td>
+				<tr><td>[<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=vhostproduct&a=del&id={{$row.id}}';}" title="删除">删除</a>][<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}">更改</a>]</td>
+					<td><input type='checkbox' id='view{{$row.id}}' onClick="updateView(this.id,{{$row.id}})" name='view' value='{{$row.view}}' {{if $row.view}}checked{{/if}}>{{$row.view}}</td>
 					<td>{{$row.id}}</td>
 					<td>{{$row.name}}</td>
-					<td>
-						<select id='node{{$row.id}}' name='node' onChange="changeNode('{{$row.id}}','{{$row.templete}}')">
+					<td><select id='node{{$row.id}}' name='node' onChange="changeNode('{{$row.id}}','{{$row.templete}}')">
 						{{foreach from=$nodes item=node}}
 						<option value='{{$node.name}}' {{if $row.node==$node.name}}selected{{/if}} title='{{$node.nickname}}'>
 						{{$node.name}}
 						</option>
 						{{/foreach}}
 						</select>
-						<div id='busy{{$row.id}}'></div>
-				</td>
-				<td>{{if $row.cdn}}cdn/-{{else}}{{$row.web_quota}}&nbsp;/&nbsp;{{$row.db_quota}}{{/if}}</td>
-				<td>{{$row.db_type}}</td>
-				<td>{{$row.price/100}}</td>
-				<td>{{if $row.domain=='-1'}}不限{{else}}{{$row.domain}}{{/if}}</td>
-				<td>{{if $row.cdn}}-{{else}}{{if $row.subdir_flag}}允许{{/if}} {{$row.subdir}}{{/if}}</td>
-				<td>{{$row.templete}}
-					{{if $row.subtemplete}}:{{$row.subtemplete}}{{/if}}
-				</td>
-				<td>
-					{{if $row.pause_flag!=0}}暂停销售 {{/if}}
-					{{if $row.month_flag!=0}}月付 {{/if}}
-				</td>
-				</td>
-			</tr>
+						<div id='busy{{$row.id}}'></div></td>
+					<td>{{if $row.cdn}}cdn/-{{else}}{{$row.web_quota}}&nbsp;/&nbsp;{{$row.db_quota}}{{/if}}</td>
+					<td>{{$row.db_type}}</td>
+					<td>{{$row.price/100}}</td>
+					<td>{{if $row.domain=='-1'}}不限{{else}}{{$row.domain}}{{/if}}</td>
+					<td>{{if $row.flow >0}}{{$row.flow}}G/月{{else}}不限{{/if}}</td>
+					<td>{{$row.templete}}{{if $row.subtemplete}}:{{$row.subtemplete}}{{/if}}</td>
+					<td>{{if $row.pause_flag!=0}}暂停销售 {{/if}}{{if $row.month_flag!=0}}月付 {{/if}}</td></tr>
 			{{/foreach}}
-			<tr>
-				<td colspan="12" id="bg_yellow" align="right">共计 {{$sum}} 条记录&nbsp;	</td>
-			</tr>
+			<tr><td colspan="12" id="bg_yellow" align="right">共计 {{$sum}} 条记录&nbsp;</td></tr>
     	</table>
   </div>
 </div>
