fix tpl.php is templete

--- a/admin/view/default/setting/setother.html
+++ b/admin/view/default/setting/setother.html
@@ -29,6 +29,13 @@ function getcron()
 		    <tr><td >注册用户预存金额：</td>
 		        <td ><input name="reg_user_price" value="{{if $setting.reg_user_price}}{{$setting.reg_user_price/100}}{{else}}0{{/if}}"  size="10"/>&nbsp;元</td></tr> 
 		    
+		    <tr><td>模板目录:</td>
+				<td><select name='view_dir'>
+						{{for $i=0;$i<$view_dir_count;$i++}}
+						<option value="{{$view_dir[$i]}}" {{if $setting.view_dir==$view_dir[$i]}}selected {{/if}}/>{{$view_dir[$i]}}</option>
+						{{/for}}
+					</select>  &nbsp;用于切换admin和user目录下view目录的模板</td></tr>
+			
 		    
 			<tr><td></td>
 				<td><input type='submit' value='确定'>&nbsp;&nbsp;</td></tr>
