fix add findPasswd

--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -182,8 +182,7 @@ img{margin:0;padding:0;border:0;}
 					密码:
 					<input name="passwd" type="password" size="12" />
 					<input type="submit" name="Submit" value="登录" />
-					<a href="?c=public&a=register_n"><font color='red'>注册</font></a>
-					忘记密码 
+					<a href="?c=public&a=register_n"><font color='red'>&nbsp;&nbsp;<big>注册</big>&nbsp;&nbsp;</font></a><a href='?c=public&a=findPasswdFrom'><big>忘记密码</big></a> 
 				{{/if}}
 	  		</td>
 			<td align="right"><script language="javascript" src="?c=product&a=productList&target=self"></script></td>
